--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-image: url("/cool-background.png");
+  background-image: url("./cool-background.png");
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
